# dongchedi-car-automation

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: filters.yaml
src/avto_bot/: __init__.py  __main__.py  brands.py  config.py  fleet_risk.py  main.py  notifier.py  parser.py  scorer.py  storage.py  url_builder.py
src/avto_bot/integrations/: __init__.py
src/avto_bot/integrations/notifications/: __init__.py  telegram.py
src/avto_bot/parsers/: __init__.py  base.py
src/avto_bot/parsers/dongchedi/: __init__.py  font_decode.py  parser.py  sophon_detail.py  url_builder.py
src/avto_bot/utils/: __init__.py
tests/: test_brands_city.py  test_dom_price.py  test_fleet_risk.py  test_font_decode.py  test_integration_smoke.py  test_notifier_breakdown.py  test_parser_pc_api.py  test_scorer.py  test_sophon_detail.py  test_url_builder.py
tests/fixtures/: sophon_card_detail.json
